# ledger-lens

./: .dockerignore  CLAUDE.md  DEMO.md  PROGRESS.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
agents/: graph.py  graph_agent.py  guardrail_agent.py  llm.py  planner.py  retriever_agent.py  synthesis_agent.py
api/: main.py
db/: models.py  session.py
db/migrations/: env.py
db/migrations/versions/: ed0612ed3b38_initial_schema_filings_filing_sections_.py
evals/: golden_qa.jsonl  run_eval.py
frontend/: index.html
ingestion/: entity_extraction.py  fetch_edgar.py  fetch_openfda.py  graph_loader.py  normalize.py  normalize_openfda.py  pipeline.py  schema_drift.py  tasks.py
retrieval/: hybrid_search.py
scripts/: ask.py  ingest.py
tests/: test_agent_graph.py  test_api.py  test_entity_extraction.py  test_fetch_edgar.py  test_fetch_openfda.py  test_guardrail.py  test_normalize.py  test_normalize_openfda.py
