[project]
name = "ledger-lens"
version = "0.1.0"
description = "Multi-source financial-document intelligence pipeline with citation-grounded RAG and a scoped knowledge graph."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "neo4j>=5.24",
    "langgraph>=0.2",
    "langchain>=0.3",
    "pydantic>=2.9",
    "structlog>=24.4",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "httpx>=0.27",
    "tenacity>=9.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.setuptools]
packages = ["ingestion", "retrieval", "agents", "mcp_server", "mcp_server.tools", "api", "db", "evals"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
